--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DB_CNN = 'mongodb+srv://admin_mean_user:E06LZgApOujQJZAB@adminpro.hwilcu4.mongodb.net/hospitalDb'
+JWT_SECRET_KEY = 'tooBuzsyDreamingññ@nhndifidhfk12348896'
